- Fixed checkbox alignment in checkin schedule builder

--- a/RockWeb/Themes/Rock/Styles/theme.less
+++ b/RockWeb/Themes/Rock/Styles/theme.less
@@ -1420,6 +1420,10 @@ body.navbar-side-close {
   }
 }
 
+.schedule-builder .checkbox {
+  display: inline;
+  padding-right: (@custom-control-indicator-size / 2);
+}
 
 .note-editor.note-frame {
   margin-bottom: 0;
